# ScOPE-Tesis

./: .gitattributes  .gitignore  pyproject.toml  requirements.txt  test.py
Examples/: bayessian_opt.py  compression_matrix.py  compression_metric.py  model.py  pickle_load.py  use_scope_bayessian.py  use_scope_model.py  use_scope_pickle.py
Experiments/: Readme.md
Experiments/Clintox/: param_search.py  param_search_3_samples.py  param_search_5_samples.py
Experiments/HIV/: plots.ipynb
Experiments/bace/: plots.ipynb
Experiments/bbbp/: plots.ipynb
Experiments/clintox/: aa.py  bayessian_exp.py  halving_exp.py  plots.ipynb
Experiments/hiv/: plots.ipynb
Notebooks/: clintox.ipynb
scope/: __init__.py  model.py
scope/compressors/: __init__.py  base_compressor.py  bz2_compressor.py  gzip_compressor.py  zstandard_compressor.py
scope/distances/: __init__.py  compression_distances.py  matching_methods.py
scope/matrix/: matrix_generator.py  matrix_generator_base.py
scope/models/: ScopeOT.py  ScopePD.py  __init__.py  base_model.py
scope/param_search/: base.py  bayessian.py
scope/samples/: sample_generator.py
scope/utils/: image_to_ascii.py  report_generation.py
scope/utils/param_search/: base.py  bayesian.py
src/expetiments/: clintox.ipynb
src/scope/: __init__.py  model.py
src/scope/compression/: compressors.py  matrix.py  metrics.py
src/scope/compressors/: __init__.py  lz77_compressor.py
src/scope/distances/: __init__.py  compression_distances.py  matching_methods.py
src/scope/matrix/: __init__.py  matrix_generator.py  matrix_generatorv2.py  (+1 more)
(+20 files in other folders)
