[project]
name = "scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesus Alan Hernandez Galvan", email = "unlikeghost@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.0.0",
    "numpy>=2.2.1",
    "pot>=0.9.5",
    "scikit-learn>=1.6.1",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
]
